@@ -8344,3 +8344,6 @@ EPRINTS-3.1-beta-2
 2009-06-29 tdb
  * Added UUID metafield type
 
+2009-07-01 tdb
+ * Fixed cloning of eprints/documents/files
+
